--- a/index.html
+++ b/index.html
@@ -909,6 +909,32 @@ input[type=text] {
     </div>
 </section>
 
+<section data-bs-version="5.1" class="people07 cid-v63PWUrqGN" id="testimonials-8-v63PWUrqGN">
+    
+    <div class="container" style= "
+                    background: linear-gradient(45deg, #f90, transparent);
+                    border-radius: 50px;
+                    color: black;">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-8">
+                <p class="card-text mbr-fonts-style display-5">Website (Wikipedia: Gravity) developed using HTML, CSS, Javascript</p>
+                <div class="img-wrapper mt-3 justify-content-center">
+                    <img src="img/das.png" alt="" data-slide-to="0" data-bs-slide-to="0">
+                </div>
+                <p class="card-title mbr-fonts-style mt-3 display-7">
+                    <strong>Prabhakar Das</strong> <br>
+                    <strong>ID-2511724</strong><br>
+                    <strong>University for the Creative Arts</strong>
+
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
+
 
   <script src="https://r.mobirisesite.com/2128080/assets/web/assets/jquery/jquery.min.js?rnd=1766361599933"></script>
   <script src="https://r.mobirisesite.com/2128080/assets/bootstrap/js/bootstrap.bundle.min.js?rnd=1766361599933"></script>
