--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@ input[type=text] {
                 </div>
             </div>
             <div class="col-12 mt-5">
-                <p class="mbr-fonts-style copyright display-7">Text is available under the Creative Commons Attribution-ShareAlike 4.0 License; additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.</p><br><p mbr-fonts-style copyright display-7">Prabhakar Das</p>
+                <p class="mbr-fonts-style copyright display-7">Text is available under the Creative Commons Attribution-ShareAlike 4.0 License; additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.</p>
             </div>
         </div>
     </div>
